--- a/index.html
+++ b/index.html
@@ -493,8 +493,7 @@
         // IMPORTANT:
         // - Solana RPC calls go through /api/rpc (Vercel proxy) to avoid browser CORS/403.
         // - Helius DAS still uses Helius RPC with api-key.
-        // const RPC_PROXY = "/api/rpc";
-        const RPC_PROXY = "http://localhost:8787/rpc";
+        const RPC_PROXY = "/api/rpc";
 
 
 
