--- a/index.html
+++ b/index.html
@@ -401,8 +401,8 @@
 
     <div class="wrap">
         <div class="top">
-            <h1>Futuristic Meme Portfolio (PnL USDC)</h1>
-            <div class="badge"><span class="dot"></span><span>DAS holdings + Vercel RPC proxy + PnL (USDC)</span></div>
+            <h1>Wallet Scanning </h1>
+            <div class="badge"><span class="dot"></span><span>DAS holdings + RPC proxy + PnL (USDC)</span></div>
         </div>
 
         <div class="glass panel">
@@ -412,7 +412,6 @@
                 <div class="field wide">
                     <label>Helius API Key (DAS)</label>
                     <input id="apiKey" value="" type="password" autocomplete="off" />
-                    <div class="hint">Holdings via DAS searchAssets tokenType=fungible.</div>
                 </div>
 
 
