--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
                 <div class="field wide">
                     <label>Wallet</label>
-                    <input id="owner" value="4Aw5MXWL7fgtJ2bCRqXJJKKnTKmcrLvJjkPJoeHjgaFU" />
+                    <input id="owner" value="" />
                 </div>
 
                 <div class="field small">
