--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
                 <div class="field wide">
                     <label>Wallet</label>
-                    <input id="owner" value="" />
+                    <input id="owner" value=""  placeholder="Contract Address"/>
                 </div>
 
                 <div class="field small">
