--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Meme Portfolio — Futuristic (DAS + PnL USDC)</title>
+    <title>Wallet Scanning Solana</title>
     <style>
         :root {
             --bg0: #05050a;
