--- a/index.html
+++ b/index.html
@@ -27,13 +27,18 @@
             box-sizing: border-box;
         }
 
-       
-
-        body{
-          margin:0;
-          min-height:100vh;
-          display:flex;
-          flex-direction:column;
+       body {
+            margin: 0;
+            padding: 16px;
+            min-height: 100vh;
+            font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+            color: var(--text);
+            background:
+                radial-gradient(900px 520px at 15% 5%, rgba(255, 45, 85, .20), transparent 60%),
+                radial-gradient(820px 520px at 80% 20%, rgba(139, 92, 255, .14), transparent 55%),
+                radial-gradient(900px 700px at 40% 120%, rgba(0, 229, 255, .08), transparent 60%),
+                linear-gradient(180deg, var(--bg0), var(--bg1));
+            overflow-x: hidden;
         }
 
         body::before{
