--- a/index.html
+++ b/index.html
@@ -534,6 +534,7 @@
             <pre id="raw">{}</pre>
         </details>
     </div>
+</div>
   <footer class="siteFooter glass">
     <div class="footerInner">
       <span class="mono">© <span id="yy"></span></span>
