--- a/index.html
+++ b/index.html
@@ -533,8 +533,7 @@
             <summary>Raw JSON (debug)</summary>
             <pre id="raw">{}</pre>
         </details>
-    </div>
-</div>
+    </div></br>
   <footer class="siteFooter glass">
     <div class="footerInner">
       <span class="mono">© <span id="yy"></span></span>
