--- a/index.html
+++ b/index.html
@@ -533,15 +533,16 @@
             <summary>Raw JSON (debug)</summary>
             <pre id="raw">{}</pre>
         </details>
-    </div></br>
-  <footer class="siteFooter glass">
-    <div class="footerInner">
-      <span class="mono">© <span id="yy"></span></span>
-      <span class="sep">•</span>
-      <span>Copyright by <b>ZeecDEv</b></span>
+        </br>
+        <footer class="siteFooter glass">
+        <div class="footerInner">
+          <span class="mono">© <span id="yy"></span></span>
+          <span class="sep">•</span>
+          <span>Copyright by <b>ZeecDEv</b></span>
+        </div>
+      </footer>
     </div>
-  </footer>
-  <script>
+    <script>
           
          document.getElementById("yy").textContent = new Date().getFullYear();
 
