--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
         <div class="footerInner">
           <span class="mono">© <span id="yy"></span></span>
           <span class="sep">•</span>
-          <span>Copyright by <b>ZeecDEv</b></span>
+          <span>Copyright by <b>ZeecDev</b></span>
         </div>
       </footer>
     </div>
