--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
     }
 
     // ===== Auto refresh incremental =====
-    let AUTO_TIMER = null;
+    let AUTO_TIMER = 5;
     let PROCESSED_SIGS = new Set();
     let LAST_WALLET = "";
     let LAST_TOKENS = null;
